# trapezoidal_joint_controller

./: CMakeLists.txt  README.md  package.xml  trapezoidal_joint_controller.xml
include/trapezoidal_joint_controller/: CommandProxy.hpp  JointCommand.hpp  TrapezoidalJointController.hpp
include/trapezoidal_joint_controller/read_write_interfaces/: JointCommandInterfaces.hpp  JointStateInterfaces.hpp  ReferenceInterfaces.hpp
src/: CommandProxy.cpp  TrapezoidalJointController.cpp  trapezoidal_joint_controller_parameters.yaml
src/read_write_interfaces/: ReferenceInterfaces.cpp
