<?xml version="1.0"?>
<package format="3">
  <name>trapezoidal_joint_controller</name>
  <version>1.0.0</version>
  <description>Trapezoidal Joint Controller - Streaming controller using trapezoidal motion planner</description>
  <maintainer email="basiljamal97@gmail.com">Basil Jamal Abu Zanouneh</maintainer>
  <license>Private</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>controller_utils</depend>
  <depend>trapezoidal_motion_planner</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
